docker-compose.yml написан, работает